Fix: correccion de contraste .btn-success

--- a/frontend/src/app/pages/nueva-reserva/nueva-reserva.component.scss
+++ b/frontend/src/app/pages/nueva-reserva/nueva-reserva.component.scss
@@ -498,7 +498,7 @@
 
   &-success {
     background: #10b981;
-    color: white;
+    color: #064e3b;
 
     &:hover:not(:disabled) {
       background: #059669;
